 * IntaRNA/InteractionEnergyIdxOffset : 
   + bugfix: adding missing offset-based overwrites
 * IntaRNA/OutputConstraint :
   + noGUend : whether or not GU is allowed at interaction ends
 * bin/CommandLineParsing :
   * input file handling replaced with new|deleteInStream
   + outNoGUend : whether or not GU is allowed at interaction and helix ends
 * README.md :
   + gzip compression docu
   + outNoGUend docu
 * tests :
   + outNoGUend

190912 Martin Raden :
 + python/intarnapvalue : p-value computation for IntaRNA energy scores
   (thanks to Fabio Gutmann)
 * configure :
   + check for python >= 3.6
   + optional enabling of intarnapvalue installation (disabled by default)
 * tests/data/Makefile.am :
   + distribution of all tests ensured

190911 Martin Raden :
 * IntaRNA/SeedHandler :
   * isFeasibleSeedBasePair() : now virtual and public
 * IntaRNA/SeedHandlerIdxOffset :
   + addSeeds() 
   + isFeasibleSeedBasePair()
   + areLoopOverlapping()
 * IntaRNA/PredictorMfe2dSeedExtension :
   * traceBack() :
     * trace order optimized
 * IntaRNA/PredictorMfeEns2dSeedExtensionHeuristic :
   * fill*() : reduced to updateZ() calls to reduce code redundancy 

190910 Martin Raden :
 * IntaRNA/PredictorMfe2d*SeedExtension :
   + noLP support
 + tests for noLP seed extension (model=X)
 * bin/CommandLineParsing :
   * parseSequencesFasta() :
     * name = FASTA header prefix up to first whitespace
 * IntaRNA/PredictorMfe :
   + HashIdx2E : hash for base pair to BestInteractionE objects
   + mfe4leftEnd : (optional) hash to store best interaction for left boundary;
     filled by updateMfe4leftEnd()
   + updateMfe4leftEnd() : updates mfe4leftEnd
   * getNextBest() :
     + default implementation based on mfe4leftEnd
   * updateOptima() :
     + calls updateMfe4leftEnd() if outconstraint.reportOverlap != BOTH
   * exact + seed-extension predictors :
     - getNextBest() dummy functions : obsolete
     - outConstraint.reportOverlap != BOTH error : obsolete